--- a/src/components/Pages/WhoSoundtrackedMost/WhoSoundtrackedMost.css
+++ b/src/components/Pages/WhoSoundtrackedMost/WhoSoundtrackedMost.css
@@ -4,6 +4,7 @@
   flex-direction: column;
   align-items: center;
   margin-top: 200px;
+  color: var(--white-color);
 }
 
 .who-soundtracked__profile-image-container {
@@ -33,4 +34,24 @@
 .who-soundtracked__profile-image--image {
   width: 100%;
   height: 100%;
+}
+
+.who-soundtracked__title {
+  font-size: 2.8rem;
+  font-weight: bold;
+  margin: 0 30px;
+  text-align: center;
+}
+
+.who-soundtracked__subtitle {
+  font-size: 1.8rem;
+  margin: 80px 30px 0;
+  text-align: center;
+}
+
+.who-soundtracked__subtitle span {
+  background: -webkit-linear-gradient(135deg, #43CBFF 0%, #9708CC 100%);
+  -webkit-background-clip: text;
+  background-clip: text;
+  color: transparent;
 }
