--- a/src/components/Pages/Grew/Grew.css
+++ b/src/components/Pages/Grew/Grew.css
@@ -1,6 +1,8 @@
 .grew-container {
   margin: 155px 30px 0;
   color: var(--white-color);
+  display: flex;
+  flex-direction: column;
 }
 
 .grew__first-text {
@@ -33,3 +35,44 @@
   color: var(--black-color);
   left: -63px;
 }
+
+.grew__collections-text {
+  position: relative;
+  font-size: 1.8rem;
+  font-style: normal;
+  font-weight: 400;
+  text-align: center;
+  top: -18px;
+}
+
+.grew__browse-collections-button {
+  width: 183px;
+  height: 41px;
+  background-color: var(--black-color);
+  color: var(--grey-color);
+  font-size: 1.4rem;
+  text-align: center;
+  font-weight: 700;
+  border: 2px solid var(--grey-color);
+  border-radius: 40px;
+  align-self: center;
+}
+
+.grew__play-icons-container {
+  display: flex;
+  flex-direction: row;
+  align-items: center;
+  margin: 44.5px 0;
+  align-self: center;
+}
+
+.grew__play-icons-container p {
+  font-size: 1.2rem;
+  font-weight: 400;
+  margin-right: 12px;
+}
+
+.grew__play-icons--right {
+  margin-right: 12px;
+}
+
