--- a/src/components/Pages/Hero/Hero.css
+++ b/src/components/Pages/Hero/Hero.css
@@ -64,6 +64,7 @@
   }
 
   .hero__section-container {
+    position: relative;
     margin-left: 60px;
     padding-top: 255px;
     width: 377px;
@@ -82,4 +83,5 @@
     height: 78px;
     font-size: 2.4rem;
   }
+
 }
