--- a/src/components/SongPlaying/SongPlaying.css
+++ b/src/components/SongPlaying/SongPlaying.css
@@ -7,6 +7,10 @@
   align-self: center;
 }
 
+.song-playing__container--hide {
+  display: none;
+}
+
 .song-playing__container p {
   font-size: 1.2rem;
   font-weight: 400;
@@ -20,12 +24,13 @@
 @media screen and (min-width: 1366px) {
 
   .song-playing__container {
-    margin: 32 0 0 0;
+    margin: 32px 0 0 0;
   }
 
   .song-playing__container p {
     font-size: 2.5rem;
     margin-right: 16px;
+    color: var(--white-color);
   }
 
   .song-playing__right {
