--- a/src/components/Pages/Hero/Hero.css
+++ b/src/components/Pages/Hero/Hero.css
@@ -42,12 +42,6 @@
 }
 
 @media screen and (min-width: 768px) {
-
-}
-
-/* Large */
-
-@media screen and (min-width: 1366px) {
   .hero__container {
     display: flex;
     flex-direction: row;
@@ -65,9 +59,9 @@
 
   .hero__section-container {
     position: relative;
-    margin-left: 60px;
+    margin: 0;
     padding-top: 255px;
-    width: 377px;
+    width: 100%;
   }
 
   .hero__section-container--year {
@@ -76,6 +70,7 @@
 
   .hero__section-container--text {
     font-size: 5rem;
+    width: 377px;
   }
 
   .hero__section-container--button {
@@ -83,5 +78,4 @@
     height: 78px;
     font-size: 2.4rem;
   }
-
 }
