--- a/src/components/SongPlaying/SongPlaying.css
+++ b/src/components/SongPlaying/SongPlaying.css
@@ -1,5 +1,5 @@
 
-.song-playing__container {
+.song-playing__container--show {
   display: flex;
   flex-direction: row;
   align-items: center;
@@ -11,7 +11,7 @@
   display: none;
 }
 
-.song-playing__container p {
+.song-playing__container--show p {
   font-size: 1.2rem;
   font-weight: 400;
   margin-right: 12px;
@@ -21,20 +21,20 @@
   margin-right: 12px;
 }
 
-@media screen and (min-width: 1366px) {
-
-  .song-playing__container {
+@media screen and (min-width: 768px) {
+  .song-playing__container--show {
     margin: 32px 0 0 0;
   }
 
-  .song-playing__container p {
+  .song-playing__container--show p {
     font-size: 2.5rem;
     margin-right: 16px;
+    font-weight: 400;
+    font-style: normal;
     color: var(--white-color);
   }
 
   .song-playing__right {
     margin-right: 16px;
   }
-
 }
