--- a/src/components/Pages/SongsDownloaded/SongsDownloaded.css
+++ b/src/components/Pages/SongsDownloaded/SongsDownloaded.css
@@ -21,3 +21,15 @@
   font-weight: 400;
   margin: 16px 30px 0;
 }
+
+@media screen and (min-width: 768px) {
+  .songs-downloaded__title {
+    font-size: 5.1rem;
+    margin-left: 25px;
+  }
+  .songs-downloaded__text {
+    font-size: 2.5rem;
+    margin: 32px 0 0 25px;
+    width: 758px;
+  }
+}
