--- a/src/components/Pages/Albums/Albums.css
+++ b/src/components/Pages/Albums/Albums.css
@@ -1,19 +1,29 @@
 
 .albums-component-container {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
+  position: relative;
+  display: grid;
+  grid-template-rows: repeat(5, 355px);
+  justify-content: center;
   margin-top: 64px;
 }
 
 .albums-component-container figure {
-  position: relative;
   margin-bottom: 8px;
 }
 
 @media screen and (min-width: 768px) {
   .albums-component-container {
+    max-width: 1366px;
+    /* width: 100vw; */
+    justify-self: center;
+    margin: 0 auto;
+    height: 1888px;
     background-color: tomato;
+    margin-top: 128px;
+  }
+  .albums-component-container figure {
+    position: absolute;
+    margin: 0;
   }
   .albums-component-container figure {
     width: 355px;
@@ -25,5 +35,21 @@
   }
   .albums-component__figure--0 {
     left: 25px;
+  }
+  .albums-component__figure--1 {
+    top: 296px;
+    right: 248px;
+  }
+  .albums-component__figure--2 {
+    top: 810px;
+    left: 137px;
+  }
+  .albums-component__figure--3 {
+    top: 1131px;
+    right: 25px;
+  }
+  .albums-component__figure--4 {
+    top: 1533px;
+    left: 428px;
   }
 }
