--- a/src/components/Pages/SongsDownloaded/SongsDownloaded.css
+++ b/src/components/Pages/SongsDownloaded/SongsDownloaded.css
@@ -23,6 +23,11 @@
 }
 
 @media screen and (min-width: 768px) {
+  .songs-downloaded-container {
+    width: 1366px;
+    justify-self: center;
+    margin: 0 auto;
+  }
   .songs-downloaded__title {
     font-size: 5.1rem;
     margin-left: 25px;
