--- a/src/components/Pages/Hero/Hero.css
+++ b/src/components/Pages/Hero/Hero.css
@@ -43,6 +43,45 @@
 
 @media screen and (min-width: 768px) {
   .hero__container {
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    justify-self: center;
+    margin: 0 auto 156px;
+  }
+
+  .hero__title {
+    font-size: 56rem;
+    margin: 0;
+    left: -104px;
+  }
+
+  .hero__section-container {
+    position: relative;
+    margin: 0;
+    padding-left: 25px;
+    width: 100%;
+  }
+
+  .hero__section-container--year {
+    font-size: 3.7rem;
+  }
+
+  .hero__section-container--text {
+    font-size: 5rem;
+    width: 377px;
+  }
+
+  .hero__section-container--button {
+    width: 179px;
+    height: 78px;
+    font-size: 2.4rem;
+  }
+}
+
+@media screen and (min-width: 1366px) {
+  .hero__container {
     display: flex;
     flex-direction: row;
     max-width: 1366px;
