--- a/src/components/Pages/SongsDownloaded/SongsDownloaded.css
+++ b/src/components/Pages/SongsDownloaded/SongsDownloaded.css
@@ -24,7 +24,7 @@
 
 @media screen and (min-width: 768px) {
   .songs-downloaded-container {
-    width: 1366px;
+    max-width: 1366px;
     justify-self: center;
     margin: 0 auto;
   }
