--- a/src/components/Pages/WhoSoundtrackedMost/WhoSoundtrackedMost.css
+++ b/src/components/Pages/WhoSoundtrackedMost/WhoSoundtrackedMost.css
@@ -5,6 +5,7 @@
   align-items: center;
   margin-top: 200px;
   color: var(--white-color);
+  border: 4px solid red;
 }
 
 .who-soundtracked__profile-image-container {
@@ -54,4 +55,64 @@
   -webkit-background-clip: text;
   background-clip: text;
   color: transparent;
+}
+
+@media screen and (min-width: 768px) {
+  .who-soundtracked-container {
+    display: grid;
+    grid-template-columns: 636px 600px;
+    max-width: 1366px;
+    justify-self: center;
+    margin: 0 auto;
+  }
+  .who-soundtracked-container:hover .who-soundtracked__profile-image--background {
+    animation-name: gradient;
+    animation-duration: 8s;
+    animation-iteration-count: infinite;
+    animation-timing-function: linear;
+  }
+  .who-soundtracked__profile-image-container {
+    grid-column: 2 / 3;
+    width: 600px;
+    height: 600px;
+  }
+  .who-soundtracked__profile-image--background {
+    width: 600px;
+    height: 600px;
+  }
+  .who-soundtracked__profile-image--figure {
+    width: 447px;
+    height: 447px;
+  }
+  .who-soundtracked__title {
+    font-size: 51px;
+    margin: 0;
+    text-align: start;
+  }
+  .who-soundtracked__subtitle {
+    font-size: 2.5rem;
+    margin: 0;
+    text-align: start;
+  }
+}
+
+@keyframes gradient {
+  0% {
+    width: 550px;
+    height: 550px;
+    background: radial-gradient(66.58% 66.58% at 108.17% 31.75%, #589AF2 0%, #7A4CDE 100%);
+    filter: blur(154px);
+  }
+  50% {
+    width: 660px;
+    height: 660px;
+    background: radial-gradient(66.58% 66.58% at 108.17% 31.75%, #E658F2 0%, #440FB9 100%);
+    filter: blur(154px);
+  }
+  100% {
+    width: 600px;
+    height: 600px;
+    background: radial-gradient(145.67% 145.67% at 108.17% 31.75%, #2BA8CF 0%, #FF39EB 100%);
+    filter: blur(154px);
+  }
 }
