--- a/src/components/Pages/WhoSoundtrackedMost/WhoSoundtrackedMost.css
+++ b/src/components/Pages/WhoSoundtrackedMost/WhoSoundtrackedMost.css
@@ -5,7 +5,6 @@
   align-items: center;
   margin-top: 200px;
   color: var(--white-color);
-  border: 4px solid red;
 }
 
 .who-soundtracked__profile-image-container {
@@ -60,19 +59,22 @@
 @media screen and (min-width: 768px) {
   .who-soundtracked-container {
     display: grid;
-    grid-template-columns: 636px 600px;
+    grid-template-columns: 686px 680px;
+    grid-template-rows: repeat(2, 1fr);
     max-width: 1366px;
     justify-self: center;
-    margin: 0 auto;
+    margin: 200px auto 0;
   }
   .who-soundtracked-container:hover .who-soundtracked__profile-image--background {
     animation-name: gradient;
-    animation-duration: 8s;
+    animation-duration: 2s;
     animation-iteration-count: infinite;
     animation-timing-function: linear;
   }
   .who-soundtracked__profile-image-container {
+    margin-right: 80px;
     grid-column: 2 / 3;
+    grid-row: 1 / 4;
     width: 600px;
     height: 600px;
   }
@@ -85,13 +87,16 @@
     height: 447px;
   }
   .who-soundtracked__title {
-    font-size: 51px;
-    margin: 0;
+    grid-column: 1 / 2;
+    grid-row: 1 / 2;
+    font-size: 5rem;
+    margin: 0 25px;
     text-align: start;
   }
   .who-soundtracked__subtitle {
+    align-self: flex-start;
     font-size: 2.5rem;
-    margin: 0;
+    margin: 0 25px;
     text-align: start;
   }
 }
