--- a/src/components/Pages/Hero/Hero.css
+++ b/src/components/Pages/Hero/Hero.css
@@ -40,6 +40,7 @@
   font-weight: 700;
   color: var(--black-color);
   outline: none;
+  cursor: pointer;
 }
 
 @media screen and (min-width: 768px) {
